@@ -1,5 +1,9 @@
 (Format: Year/Month/Day)
 Changes for 0.9.7:
+*03/12/15:
+  * Fix mozilla focus issue (Simon)
+    - When input focus hint not present assume false rather than true
+    WinClient.cc
 *03/12/13:
   * Moving client to drop zone when drag'n'drop to root window (Henrik)
     Window.cc
